NetBSD Problem Report #39534

From www@NetBSD.org  Sat Sep 13 15:54:56 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 8988163B853
	for <gnats-bugs@gnats.netbsd.org>; Sat, 13 Sep 2008 15:54:56 +0000 (UTC)
Message-Id: <20080913155456.56F0763B11D@narn.NetBSD.org>
Date: Sat, 13 Sep 2008 15:54:56 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Typo in include/glob.h
X-Send-Pr-Version: www-1.0

>Number:         39534
>Category:       lib
>Synopsis:       Typo in include/glob.h
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 13 15:55:00 +0000 2008
>Closed-Date:    Sat Sep 13 17:05:43 +0000 2008
>Last-Modified:  Sat Sep 13 17:10:03 +0000 2008
>Originator:     Henning Petersen
>Release:        Netbsd-current
>Organization:
>Environment:
>Description:
Compile with -Wsystem-headers I found typo in glob.h.
>How-To-Repeat:

>Fix:
diff -u -r1.23 glob.h
--- include/glob.h	22 Feb 2008 18:33:51 -0000	1.23
+++ include/glob.h	13 Sep 2008 15:29:14 -0000
@@ -92,7 +92,7 @@
 #define	GLOB_TILDE	0x0800	/* Expand tilde names from the passwd file. */
 /*	GLOB_NOESCAPE	0x1000	above */
 #define	GLOB_PERIOD	0x2000	/* Allow metachars to match leading periods. */
-#define	GLOB_NO_DOTDIRS	0x4000	/* Make . and .. vanish from wildcards. *=
+#define	GLOB_NO_DOTDIRS	0x4000	/* Make . and .. vanish from wildcards. */
 #define	GLOB_QUOTE	0	/* source compatibility */

 #define	GLOB_ABEND	GLOB_ABORTED	/* source compatibility */

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Sat, 13 Sep 2008 13:05:43 -0400
State-Changed-Why:
fixed, thanks


From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39534 CVS commit: src/include
Date: Sat, 13 Sep 2008 17:05:07 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Sat Sep 13 17:05:07 UTC 2008

 Modified Files:
 	src/include: glob.h

 Log Message:
 PR/39534: Henning Petersen: Typo = instead of / to close comment.


 To generate a diff of this commit:
 cvs rdiff -r1.23 -r1.24 src/include/glob.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.