PR/39534: Henning Petersen: Typo = instead of / to close comment.